--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.2",
